# LayingGrass

./: .gitignore  CMakeLists.txt  README.md  client.cpp  consigne.md  server.cpp
.github/workflows/: build.yml
docs/: technical-doc.md  user-doc.md
includes/: Client.hpp  GameState.hpp  Lobby.hpp  LobbyManager.hpp  Packet.hpp  PacketCallback.hpp  Player.hpp  Render.hpp  Server.hpp
includes/Game/: Board.hpp  Cell.hpp  Game.hpp  PlacementRules.hpp  Tile.hpp  TilesData.hpp
includes/Render/screens/: EnteringUsername.hpp  GameEnd.hpp  InGame.hpp  InLobby.hpp  SelectingLobby.hpp  TileViewer.hpp  WaitingForLobbies.hpp  WaitingForResponse.hpp
includes/Render/utils/: Background.hpp  Board.hpp  Button.hpp  ConfirmDialog.hpp  Element.hpp  ResourcePath.hpp  Selectable.hpp  Text.hpp  Theme.hpp  TileRenderer.hpp  Tooltip.hpp
resources/: tiles_data.txt
src/: Client.cpp  GameState.cpp  Lobby.cpp  LobbyManager.cpp  Packet.cpp  Player.cpp  Render.cpp  Server.cpp
src/Game/: Board.cpp  Cell.cpp  Game.cpp  PlacementRules.cpp  Tile.cpp  TilesData.cpp
src/Render/screens/: EnteringUsername.cpp  GameEnd.cpp  InGame.cpp  InLobby.cpp  SelectingLobby.cpp  TileViewer.cpp  WaitingForLobbies.cpp  WaitingForResponse.cpp
src/Render/utils/: Background.cpp  Board.cpp  Button.cpp  ConfirmDialog.cpp  Element.cpp  ResourcePath.cpp  Selectable.cpp  Text.cpp  TileRenderer.cpp  Tooltip.cpp
tests/: boardGrid.cpp  bonusCapture.cpp  client.cpp  exchangeCoupons.cpp  gamePlacement.cpp  gameProgression.cpp  gameStart.cpp  lobby.cpp  stoneRobbery.cpp  test_stub.cpp  tileDistribution.cpp  tilePlacement.cpp
